# aerofoil

./: .gitignore  LICENSE  README.md  aerofoil.pt  manage.py  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: release.yml
aerofoil/: asgi.py  settings.py  urls.py  views.py  wsgi.py
docs/article/: bibfile.bib  main.tex
docs/article/components/: abstract.tex  header.tex
docs/article/sections/: section1.tex
docs/slide/: bibfile.bib  main.tex
docs/slide/components/: header.tex
docs/slide/sections/: intro.tex  kemajuan.tex  metodologi.tex  toc.tex
flow/: admin.py  models.py  urls.py
flow/management/commands/: autodb.py  autosdf.py
flow/migrations/: 0001_initial.py  0002_auto_20210909_1739.py  0003_auto_20210914_1148.py  0004_auto_20210914_1150.py  0005_auto_20210917_1210.py  0006_koleksiairfoil_mach.py
flow/serializers/: coordinate.py  koleksi.py
flow/services/: airfoil.py  predict.py
flow/views/: generator.py  koleksi.py
src/: main.py
src-ui/: package-lock.json  package.json
src-ui/components/: aerofoil_navbar.js  aerofoil_togglelight.js
src-ui/components/header/: aerofoil_navbar.js  aerofoil_navlink.js  aerofoil_togglelight.js
src-ui/components/index/: aerofoil_formgeom.js
src-ui/pages/: _app.js  _document.js  index.js
src-ui/services/: geom.js  predict.js
src-ui/themes/: default.js
src/aerofoil/: routers.py
src/aerofoil/configs/: loader.py
src/aerofoil/models/: arch.py  (+1 more)
templates/foil_default/: README.md  package-lock.json  package.json  quasar.conf.js
templates/rest_framework/: api.html
(+32 files in other folders)
