[tool.poetry]
name = "aerofoil"
version = "1.0.0"
description = "Web-based applications to help users in predicting aerodynamic coefficients of airfoils"
authors = ["Arizal Akbar Zikri <akbarpn136@gmail.com>"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
matplotlib = "^3.5.1"
opencv-contrib-python = "^4.5.5"
scikit-fmm = "^2022.3.26"
torch = "^1.11.0"
torchvision = "^0.12.0"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
